<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.coneccion1</groupId>
    <artifactId>FacturacionInventarios</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>9.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE90</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml-full</artifactId>
            <version>5.3.0</version>
            <type>pom.sha512</type>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.3.0</version>
            <type>pom.sha512</type>
        </dependency>
        <dependency>
            <groupId>com.github.pjfanning</groupId>
            <artifactId>xmlbeans</artifactId>
            <version>2.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.lucee</groupId>
            <artifactId>xmlbeans</artifactId>
            <version>2.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.3.0</version>
            <type>pom.sha512</type>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>ooxml-schemas</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.0-alpha3</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.org.apache.poi</groupId>
            <artifactId>poi-scratchpad</artifactId>
            <version>5.2.3.wso2v1</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.17.0.wso2v1</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.17.0.wso2v1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi.DELETE</groupId>
            <artifactId>poi</artifactId>
            <version>3.0-FINAL</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-scratchpad</artifactId>
            <version>5.3.0</version>
            <type>pom.sha512</type>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml-schemas</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml-lite</artifactId>
            <version>5.3.0</version>
            <type>pom.sha512</type>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <exec.mainClass>com.coneccion1.facturacioninventarios.FacturacionInventarios</exec.mainClass>
    </properties>
</project>